--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "slim/slim": "^3.0",
         "monolog/monolog": "^1.23",
-        "zircote/swagger-php": "^2.0"
+        "zircote/swagger-php": "^2.0",
+        "kint-php/kint": "^2.1"
     },
     "autoload": {
         "psr-4": {
