--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "slim/slim": "^3.0",
         "monolog/monolog": "^1.23",
         "zircote/swagger-php": "^2.0",
-        "kint-php/kint": "^2.1"
+        "kint-php/kint": "^2.1",
+        "symfony/var-dumper": "^3.4"
     },
     "autoload": {
         "psr-4": {
